--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -3,7 +3,7 @@
         Bem Vindo!
     </mat-card-title>
     <mat-card-subtitle class="subtitle">
-        Sistema para exemplificar a construção de um cadastro em Angular teste
+        Sistema para exemplificar a construção de um cadastro em Angular 2022
     </mat-card-subtitle>
 
  
