--- a/frontend/src/app/components/clientes/clientes-read/clientes-read.component.html
+++ b/frontend/src/app/components/clientes/clientes-read/clientes-read.component.html
@@ -1,8 +1,40 @@
-<ul>
-
-    <li *ngFor="let clientes of clientes">
-
-        {{ clientes.id}} {{clientes.name}} {{clientes.idade}}
-
-    </li>
-</ul>
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="clientes">
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      </ng-container>
+  
+      <!-- Price Column -->
+      <ng-container matColumnDef="idade">
+        <th mat-header-cell *matHeaderCellDef>Idade</th>
+        <td mat-cell *matCellDef="let row">{{ row.idade}}</td>
+      </ng-container>
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let row">
+          <a routerLink="/clientes/update/{{ row.id }}" class="edit">
+            <i class="material-icons">
+              border_color
+            </i>
+          </a>
+          <a routerLink="/products/delete/{{ row.id }}" class="delete">
+            <i class="material-icons">
+              delete
+            </i>
+          </a>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
