--- a/frontend/src/app/components/clientes/clientes-read/clientes-read.component.html
+++ b/frontend/src/app/components/clientes/clientes-read/clientes-read.component.html
@@ -26,7 +26,7 @@
               border_color
             </i>
           </a>
-          <a routerLink="/products/delete/{{ row.id }}" class="delete">
+          <a routerLink="/clientes/delete/{{ row.id }}" class="delete">
             <i class="material-icons">
               delete
             </i>
