--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -10,11 +10,11 @@
                 [(ngModel)]="product.price" name="price">
         </mat-form-field>
     </form>
-    <button mat-raised-button (click)="createProduct()" color="primary">
+    <button mat-raised-button (click)="createProduct()" class="criar">
         Salvar
     </button>
     
-    <button mat-raised-button (click)="cancel()">
+    <button mat-raised-button (click)="cancel()" color="primary">
         Cancelar
     </button>
 </mat-card>
