tratando mensagens e tela de login

--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -4,7 +4,7 @@
         <mat-nav-list class="nav-list">
             <a mat-list-item routerLink="/">
                 <i class="material-icons">
-                    home
+                    bungalow
                 </i>
                 Início
             </a>
@@ -19,6 +19,12 @@
                     storefront
                 </i>
                 Produtos
+            </a>
+            <a mat-list-item  routerLink="/login">
+                <i class="material-icons">
+                    login
+                </i>
+                Login
             </a>
         </mat-nav-list>
     </mat-sidenav>
