--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -21,12 +21,12 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-        <a routerLink="/products/update/{{ row.id }}" class="edit">
+        <a routerLink="/products/update/{{ row.id }}" title="Editar Produto" class="edit">
           <i class="material-icons">
             border_color
           </i>
         </a>
-        <a routerLink="/products/delete/{{ row.id }}" class="delete">
+        <a routerLink="/products/delete/{{ row.id }}"  title="Excluir Produto" class="delete">
           <i class="material-icons">
             delete
           </i>
