--- a/frontend/src/app/views/clientes-crud/clientes-crud.component.html
+++ b/frontend/src/app/views/clientes-crud/clientes-crud.component.html
@@ -1,5 +1,5 @@
 <button mat-raised-button (click)="navigateToClientesCreate()"
-    color="primary">
+    color="primary" title="Cadastrar Novo Cliente">
     Novo Cliente
 </button>
 
