--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,6 +1,6 @@
 
 <button mat-raised-button (click)="navigateToProductCreate()"
-    color="primary">
+    color="primary" title="Cadastrar Novo Produto">
     Novo Produto 
 </button>
 
