Ajustando icones no footer

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,15 +1,31 @@
 <mat-toolbar class="footer">
-    <span>
-        Desenvolvido
-        <i class="material-icons v-middle" icone>
-           dashboard
-        </i>
-        com tecnologia em <strong><span class="blue">A</span>
-            <span class="yellow">n</span>
-            <span class="gray">g</span>
-            <span class="gren">u</span>
-            <span class="orage">l</span>
-            <span class="red">a</span>r</strong>
-    </span>
-    
+    <div class="icone">
+        <a mat-list-item href="https://www.instagram.com/ju_oluz/" title="Me siga no Instagram">
+            <i class="fab fa-instagram cor-insta"></i>
+        </a>
+        <a mat-list-item href="https://web.whatsapp.com/send?phone=55017997225995%20target=_blank"
+            title="Me chame no Whatsapp">
+            <i class="fab fa-whatsapp cor-zap"></i>
+        </a>
+        <a mat-list-item href="https://www.facebook.com/juliano.martins.58958" title="Me adicione no Facebook">
+            <i class="fab fa-facebook cor-face"></i>
+        </a>
+        <a mat-list-item href="https://www.linkedin.com/in/juliano-martins-942a3a163/" title="Me adicione no Linkedin">
+            <i class="fab fa-linkedin cor-lin"></i>
+        </a>
+    </div>
+    <div class="rodape">
+        <span>
+            Desenvolvido
+            <i class="material-icons v-middle" icone>
+                dashboard
+            </i>
+            com tecnologia em <strong><span class="blue">A</span>
+                <span class="yellow">n</span>
+                <span class="gray">g</span>
+                <span class="gren">u</span>
+                <span class="orage">l</span>
+                <span class="red">a</span>r</strong>
+        </span>
+    </div>
 </mat-toolbar>
