--- a/frontend/src/app/components/template/footer/footer.component.css
+++ b/frontend/src/app/components/template/footer/footer.component.css
@@ -1,13 +1,41 @@
 .footer {
     position: fixed;
     bottom: 0;
-   background-color: rgb(145, 145, 145);
+    background-color: rgb(145, 145, 145);
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    width: 100%;
+    padding-left: 200px;
 }
 
-.footer > span {
+.footer span {
     font-size: 1.1rem;
     font-weight: 300;
     color: rgb(10, 10, 10);
+}
+
+.icone a i {
+
+    padding-right: 5px;
+    font-size: 25px;
+}
+
+.icone {
+    display: flex;
+}
+
+.cor-insta  {
+    color:  rgb(233, 89, 80);
+}
+
+.cor-face{
+    color: blue;
+}
+
+.cor-zap{
+    color: greenyellow;
+}
+
+.cor-lin{
+    color: rgb(17, 0, 116);
 }
